--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
+  "type": "module",
   "devDependencies": {
-    "cypress": "^14.5.1"
+    "cypress": "^14.5.1",
+    "eslint": "^9.30.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-cypress": "^5.1.0",
+    "husky": "^9.1.7",
+    "prettier": "^3.6.2"
   },
   "scripts": {
     "cy:qa": "cypress run --config-file cypress/configs/qa.config.js",
@@ -8,9 +14,20 @@
     "cy:prod": "cypress run --config-file cypress/configs/prod.config.js",
     "cy:qa:open": "cypress open --config-file cypress/configs/qa.config.js",
     "cy:staging:open": "cypress open --config-file cypress/configs/staging.config.js",
-    "cy:prod:open": "cypress open --config-file cypress/configs/prod.config.js"
+    "cy:prod:open": "cypress open --config-file cypress/configs/prod.config.js",
+    "prepare": "husky",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier . --check",
+    "format:fix": "prettier . --write"
   },
   "dependencies": {
     "dotenv": "^17.2.0"
+  },
+  "lint-staged": {
+    "*.{js,json}": [
+      "prettier --check",
+      "eslint"
+    ]
   }
 }
