--- a/package.json
+++ b/package.json
@@ -2,16 +2,21 @@
   "type": "module",
   "devDependencies": {
     "cypress": "^14.5.1",
+    "cypress-mochawesome-reporter": "^4.0.0",
     "eslint": "^9.30.1",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-cypress": "^5.1.0",
     "husky": "^9.1.7",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^5.0.0",
+    "mochawesome-report-generator": "^6.2.0",
     "prettier": "^3.6.2"
   },
   "scripts": {
     "cy:qa": "cypress run --config-file cypress/configs/qa.config.js",
     "cy:staging": "cypress run --config-file cypress/configs/staging.config.js",
     "cy:prod": "cypress run --config-file cypress/configs/prod.config.js",
+    "cy:prod:cicd": "node scripts/run_cicd.js",
     "cy:qa:open": "cypress open --config-file cypress/configs/qa.config.js",
     "cy:staging:open": "cypress open --config-file cypress/configs/staging.config.js",
     "cy:prod:open": "cypress open --config-file cypress/configs/prod.config.js",
@@ -19,7 +24,10 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier . --check",
-    "format:fix": "prettier . --write"
+    "format:fix": "prettier . --write",
+    "report:clean": "node -e \"require('fs').rmSync('cypress/reports', { recursive: true, force: true })\"",
+    "report:merge": "npx mochawesome-merge cypress/reports/.jsons/*.json > cypress/reports/mochawesome.json",
+    "report:generate": "npx mochawesome-report-generator cypress/reports/mochawesome.json --reportDir cypress/reports"
   },
   "dependencies": {
     "dotenv": "^17.2.0"
